# applyingOopInC

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: bar.c.40D4F285C0AC6AB7.idx  bar.c.6D836DE20A907E65.idx  bar.h.65369B451C98882A.idx  bar.h.CE2E7D8B8DD8D60E.idx  foo.c.238771EAEC34BBE9.idx  foo.c.5A02127DE847F649.idx  foo.h.77D34B9516AB8BBF.idx  foo.h.AF212841D832E684.idx  log.c.84C9075067ECEA36.idx  log.c.C5D827640E623ECE.idx  log.h.04B61A3CBCDF1EB9.idx  log.h.855D4360F1CC366E.idx  logger.c.A4327CED257C40A1.idx  logger.h.D55BA24796DDD486.idx  main.c.384AD64D95AF550C.idx  main.c.E570610963363C61.idx  monitor.c.0F218AF21A6D998C.idx  monitor.h.298590E292D0E742.idx  test_bar.c.932A1AF62AEF73CA.idx  test_bar.c.B455D62A5AE9269E.idx  test_foo.c.3046608A11C3AED1.idx  test_foo.c.9C2E8AD8124EB8CD.idx  test_logger.c.B4B958215ACB6CEE.idx  test_monitor.c.36BCC20B2A3FE3FB.idx
app/: main.c
cmake/: Docs.cmake
configured/: config.h.in
docs/: Doxyfile
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  logger.c  logger.h
src/monitor/: CMakeLists.txt  monitor.c  monitor.h
tests/: CMakeLists.txt  test_logger.c  test_monitor.c
